# katyusha

./: Cargo.toml  LICENSE  README.md  build.rs
c_src/: core.c  core.h
debian/: build-deb.sh  control.template
example-repo/: index.txt
src/: banner.rs  distro.rs  ffi.rs  install.rs  main.rs  manifest.rs  remove.rs  repo.rs  security.rs  system_check.rs
